# LangChain

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.obsidian/: workspace.json
AI-Engineering/: 1-introduction-to-building-ai-applications-with-foundation-models-ENHANCED.md  1-introduction-to-building-ai-applications-with-foundation-models.md  6-RAG-and-agents.md  7-Finetuning.md  8-Dataset-Engineering.md
AI-Engineering/images/: diagrams.drawio
LangChain/LangChain_Chat_with_Your_Data/: 1_Document_Loading.md  3_Vectors_Embeddings.md  4_Retrieval.md  LangChain_Chat_w_Data_Summary.md
LangChain/LangChain_Functions_tools_agent/: LangChain_Function_Tool_Summary.ipynb
LangChain/LangChain_for_LLM_Application_Development/: LangChain_Application_Summary.md
LangChain/LangGraph_AI_Agent/: LangGraph_Agent_Summary.md
LangChain/Summaries/: Fin_LangChain_Overall.ipynb  Fin_lcel_cheatsheet.ipynb  LangChain_vs_LangGraph.md
LangChain_Chat_with_Your_Data/: 2_Document_Spliting.md  5_Summary.md
LangChain_Functions_tools_agent/: LangChain_Function_Tool_Summary.md  summary.ipynb
LangChain_for_LLM_Application_Development/: 1_model_prompt_parser.md  2_memory.md  3_chain.md  4_Question_Answering.md  5_Evaluation.md  6_Agents.md  7_Summary.ipynb  7_Summary.md
LangGraph_AI_Agent/: summary.ipynb  summary.md
LangGraph_Long_Term_Agentic_Memory/: 2_Baseline_Email_Asistant.md  2_Baseline_Email_Assistant.md  3_Email_Assistant_with_Semantic_memory.md  LangGraph_Memory_Summary.md
Summaries/: LangChain_Function_Tool_Summary.md
(+19 files in other folders)
