[project]
name = "LangChain_Study_Note"
version = "0.1.0"
description = "Python project to run example jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain==0.3.18",
    "langchain-anthropic==0.3.7",
    "langchain-openai==0.3.5",
    "langgraph==0.2.72",
    "langmem==0.0.8",
    "pandas>=2.3.2",
    "python-dotenv==1.0.1",
]
