[project]
name = "LangChain_Study_Note"
version = "0.1.0"
description = "Python project to run example jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.5",
    "docarray>=0.41.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
    "langchain==0.3.18",
    "langchain-anthropic==0.3.7",
    "langchain-community>=0.3.17",
    "langchain-openai==0.3.5",
    "langgraph==0.2.72",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langmem==0.0.8",
    "langsmith>=0.3.45",
    "openapi-pydantic>=0.5.1",
    "pandas>=2.3.2",
    "panel>=1.7.5",
    "python-dotenv==1.0.1",
    "tavily-python>=0.7.11",
    "wikipedia>=1.4.0",
]
